--- a/tsconfig.lib.json
+++ b/tsconfig.lib.json
@@ -1,5 +1,12 @@
 {
 	"extends": "@deviltea/tsconfig/base",
+	"compilerOptions": {
+		"paths": {
+			"@/*": [
+				"./src/*"
+			]
+		}
+	},
 	"include": [
 		"./src/**/*.ts"
 	]
