--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
 		"dist"
 	],
 	"scripts": {
-		"build": "unbuild",
+		"build": "unbuild && pnpm calcsize",
 		"dev": "unbuild --stub",
 		"lint": "eslint .",
 		"lint:fix": "eslint . --fix",
@@ -49,6 +49,7 @@
 		"start": "esno src/index.ts",
 		"test": "vitest",
 		"test:cov": "vitest --coverage",
+		"calcsize": "tsx ./scripts/calcsize.ts",
 		"typecheck": "tsc --noEmit --project tsconfig.test.json",
 		"prepare": "simple-git-hooks"
 	},
@@ -58,13 +59,18 @@
 		"@deviltea/tsconfig": "0.0.6",
 		"@types/node": "20.12.7",
 		"@vitest/coverage-v8": "1.5.0",
+		"brotli-size": "^4.0.0",
 		"bumpp": "9.4.0",
 		"eslint": "8.57.0",
 		"esno": "4.0.0",
+		"fast-glob": "^3.3.2",
+		"gzip-size": "^7.0.0",
 		"lint-staged": "15.2.2",
 		"pnpm": "8.15.7",
 		"rimraf": "5.0.5",
 		"simple-git-hooks": "2.11.1",
+		"terser": "^5.31.0",
+		"tsx": "^4.11.2",
 		"typescript": "5.4.5",
 		"unbuild": "2.0.0",
 		"vite": "5.2.8",
